fix: Fixed invalid world name conflicting with imports.

--- a/dojo_dev.toml
+++ b/dojo_dev.toml
@@ -1,5 +1,5 @@
 [world]
-name = "zKTT Contracts"
+name = "zktt"
 description = "#"
 website = "https://github.com/webisoftSoftware/zktt-contracts"
 seed = "zktt"
