add: Added filter for source & config files only, to prevent useless runner jobs.

--- a/.github/workflows/build_and_test.yaml
+++ b/.github/workflows/build_and_test.yaml
@@ -2,7 +2,13 @@ name: CI
 
 on:
   push:
+    paths:
+      - '**/*.cairo'
+      - '**/*.toml'
   pull_request:
+    paths:
+      - '**/*.cairo'
+      - '**/*.toml'
 
 jobs:
   sozo-test:
